# Software-Rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-dll.bat  copy_dll.bat
dependencies/own_math_3d/include/math_3d/: color.hpp  declarations.hpp  lin_math.hpp  mat3x3.hpp  math.hpp  ray.hpp  vector.hpp  vector3.hpp
dependencies/own_math_3d/src/: color.cpp  lin_math.cpp  mat3x3.cpp  ray.cpp  vector.cpp  vector3.cpp
dependencies/window_framework/include/window_framework/: logger.hpp  window.hpp
dependencies/window_framework/src/: window.cpp
math/: color.hpp  mat3x3.cpp
rasterizer/: CMakeLists.txt
rasterizer/app/: application.cpp  application.hpp  main.cpp
rasterizer/app/graphics/: mesh.cpp  mesh.hpp  not_crazy_mesh.cpp  not_crazy_mesh.hpp  texture.cpp  texture.hpp
rasterizer/app/graphics/shaders/: gouraud_shader.cpp  gouraud_shader.hpp  model_shader.cpp  model_shader.hpp  simple_shader.cpp  simple_shader.hpp
rasterizer/core/: abstract_shader.cpp  abstract_shader.hpp  assert_macro.hpp  assert_macros.hpp  buffer_engine.cpp  buffer_engine.hpp  buffer_engine_api.cpp  buffer_engine_api.hpp  buffer_engine_macros.hpp  gl_api.cpp  gl_api.hpp  render_engine.cpp  render_engine.hpp  render_engine_api.cpp  render_engine_api.hpp  shader.cpp  shader.hpp  shader_engine.cpp  shader_engine.hpp  shader_engine_api.cpp  shader_engine_api.hpp  shader_engine_macros.hpp  shader_pipeline_api.hpp  shader_texture_api.cpp  shader_texture_api.hpp  shader_uniform_api.hpp  texture.cpp  texture.hpp  texture_engine.cpp  texture_engine.hpp  texture_engine_api.hpp  uniform_buffer.hpp  uniform_buffer_api.cpp  uniform_buffer_api.hpp
rasterizer/core/buffer-engine-api/: buffer_engine.cpp  buffer_engine.hpp
rasterizer/core/buffer_engine/: buffer_engine.cpp  buffer_engine.hpp
rasterizer/core/render-engine-api/: render_engine.cpp  render_engine.hpp  render_engine_api.cpp  render_engine_api.hpp
rasterizer/core/render_engine/: render_engine.cpp  render_engine.hpp
rasterizer/core/shader-engine-api/: shader.hpp  shader_engine.cpp  shader_engine.hpp  shader_engine_api.cpp  shader_engine_api.hpp  shader_pipeline_api.hpp  shader_texture_api.cpp  shader_texture_api.hpp  shader_uniform_api.hpp
rasterizer/core/shader_engine/: shader.cpp  shader.hpp  shader_engine.cpp  shader_engine.hpp  uniforable.cpp  uniforable.hpp  uniform_buffer.cpp  uniform_buffer.hpp
rasterizer/core/texture-engine-api/: texture_engine.cpp  texture_engine.hpp  texture_engine_api.cpp  texture_engine_api.hpp
rasterizer/core/texture_engine/: texture.cpp  texture.hpp  texture_engine.hpp
rasterizer/graphics/: color.cpp  color.hpp  core_engine.cpp  core_engine.hpp  model.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp
rasterizer/graphics/shaders/: simple_shader.cpp  simple_shader.hpp  test.cpp  test.hpp
rasterizer/src/: main.cpp
raytracer/: CMakeLists.txt
raytracer/app/: application.cpp  application.hpp  main.cpp
raytracer/graphics/: camera.cpp  camera.hpp  color.cpp  color.hpp  intersection_data.cpp  intersection_data.hpp  material.cpp  material.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  vertex.hpp
raytracer/graphics/drawables/: drawable.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
raytracer/graphics/light/: ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  light.hpp  point_light.cpp  point_light.hpp
raytracer/graphics/materials/: colored_material.hpp  dielectric_material.cpp  dielectric_material.hpp  diffuse_material.cpp  diffuse_material.hpp  glaring_material.hpp  material.hpp  metal_material.cpp  metal_material.hpp
raytracer/objects/: ambient_light.cpp  ambient_light.hpp  camera.cpp  camera.hpp  directional_light.cpp  directional_light.hpp  drawable.hpp  light.hpp  object.cpp  object.hpp  point_light.cpp  point_light.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
raytracer/shapes/: sphere.cpp  sphere.hpp
raytracer/src/: application.cpp  application.hpp  main.cpp  scene.cpp  scene.hpp
src/: main.cpp
src/math/: color.cpp  color.hpp  declarations.hpp  functions.cpp  functions.hpp  lin_math.cpp  lin_math.hpp  mat3x3.cpp  mat3x3.hpp  vector.cpp  vector.hpp
src/rasterizer/: main.cpp
thread_pool/thread_pool/: thread_pool.cpp  thread_pool.hpp
utils/own-math-3d/include/math_3d/: color.hpp  math.hpp  matrix.hpp  matrix_operations.hpp  vector.hpp  vector_operations.hpp
utils/own-math-3d/math_3d/: color.cpp  color.hpp  const.hpp  hash.hpp  mat4.cpp  mat4.hpp  mat_op.cpp  mat_op.hpp  mat_operations.cpp  mat_operations.hpp  math.hpp  matrix.hpp  matrix_operations.cpp  matrix_operations.hpp  quaternion.cpp  quaternion.hpp  util.hpp  vec2.cpp  vec2.hpp  vec2i.cpp  vec2i.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp  vec_op.cpp  vec_op.hpp  vec_operations.cpp  vec_operations.hpp  vector_operations.cpp  vector_operations.hpp
utils/own-math-3d/src/: color.cpp  matrix_operations.cpp  quaternion.cpp  vector_operations.cpp
utils/parsers/tga/: tga_parser.cpp  tga_parser.hpp
utils/thread_pool/thread_pool/: thread_pool.cpp  thread_pool.hpp
utils/window/window/: window.cpp  window.hpp
window/window/: window.hpp
window_framework/: CMakeLists.txt
window_framework/include/window_framework/: window.hpp
window_framework/lib/win32/: window_framework_win32.lib
window_framework/lib/x64/: window_framework_x64.lib
window_framework/src/: window.cpp
window_framework/window/: window.cpp  window.hpp
